@@ -1,12 +1,12 @@
 path: "pwa"
-version: "Revision 3"
-date: 2023-03-30
+version: "Revision 4"
+date: 2023-04-04
 noCurtain: false
 noFooter: false
 noHeader: false
 noNavPage: false
 noNavSite: false
-pwaSizeMin: "270 kB"
+pwaSizeMin: "280 kB"
 head:
   title: "NET-Installer"
   manifest: "pwa.webmanifest"
