@@ -2,5 +2,5 @@
   <span class="title">{{siteTitle}}</span>
 {%-endif-%}
 {%-if siteSubtitle-%}
-  <span class="subtitle">{{siteSubtitle}}</span>
+  <p class="subtitle">{{siteSubtitle}}</p>
 {%-endif-%}
