@@ -16,7 +16,7 @@
       <div class="una-menu leaf" tabindex="0">
         <div class="una-menu item" id="menuitem-application-pwa">
           <div class="una-menu icon">✈</div>
-          <label>Offline Access</label>
+          <label>Offline Access…</label>
         </div>
       </div>
     </div>
