@@ -25,13 +25,20 @@
       </div>
     </div>
   </div>
-  <div class="field row" id="field-media-search">
-    <label>Search (s):</label>
+  <div class="field row" id="field-media-scan">
+    <label>Hold scan:</label>
     <div class="input shorter">
-      <button id="button-media-search-n05" type="button">⏪&#xFE0E; −05</button>
-      <button id="button-media-search-p05" type="button">+05 ⏩&#xFE0E;</button>
-      <button id="button-media-search-n20" type="button">⏪&#xFE0E; −20</button>
-      <button id="button-media-search-p20" type="button">+20 ⏩&#xFE0E;</button>
+      <button id="button-media-scan-slower" class="no-select" type="button">Double</button>
+      <button id="button-media-scan-faster" class="no-select" type="button">Half</button>
+    </div>
+  </div>
+  <div class="field row" id="field-media-jump">
+    <label>Jump (s):</label>
+    <div class="input shorter">
+      <button id="button-media-jump-n05" type="button">↶&#xFE0E; −5</button>
+      <button id="button-media-jump-p05" type="button">↷&#xFE0E; +5</button>
+      <button id="button-media-jump-n20" type="button">↶&#xFE0E; −20</button>
+      <button id="button-media-jump-p20" type="button">↷&#xFE0E; +20</button>
     </div>
   </div>
 </section>
