@@ -37,7 +37,7 @@ ones as needed. You can bypass the service worker with a forced reload.</p>
       <div class="field row space-between">
         <div class="input short">
           <button type="button" onclick="location.reload()">Reload</button>
-          <button type="button" onclick="history.back()">Return</button>
+          <button type="button" onclick="history.back() || window.close()">Return</button>
         </div>
       </div>
     </fieldset>
