@@ -38,11 +38,13 @@ export const application = Object.freeze({
     fileProperties: new MenuButton({ id: "file-properties" }),
     filterReset: new FormButton({ id: "filter-reset" }),
     frameReset: new FormButton({ id: "frame-reset" }),
+    mediaJumpN05: new FormButton({ id: "media-jump-n05" }),
+    mediaJumpN20: new FormButton({ id: "media-jump-n20" }),
+    mediaJumpP05: new FormButton({ id: "media-jump-p05" }),
+    mediaJumpP20: new FormButton({ id: "media-jump-p20" }),
     mediaReset: new FormButton({ id: "media-reset" }),
-    mediaSearchN05: new FormButton({ id: "media-search-n05" }),
-    mediaSearchN20: new FormButton({ id: "media-search-n20" }),
-    mediaSearchP05: new FormButton({ id: "media-search-p05" }),
-    mediaSearchP20: new FormButton({ id: "media-search-p20" }),
+    mediaScanFaster: new FormButton({ id: "media-scan-faster" }),
+    mediaScanSlower: new FormButton({ id: "media-scan-slower" }),
     mediaShowControls: new FormButton({ id: "media-show-controls" }),
     positionReset: new FormButton({ id: "position-reset" }),
     resetControls: new FormButton({ id: "reset-controls" }),
@@ -209,6 +211,7 @@ export const application = Object.freeze({
   instance: Object.seal({
     file: null,
     modified: false,
+    scanBaseSpeed: 1,
     view: NUL_STRING,
   }),
 });
